<resources>
    <string name="app_name">Waro</string>
    <string name="action_cart">Cart</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_member">Not a member ? SignUp now</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    <string name="my_account">Account</string>
    <string name="categories">Categories</string>
    <string name="history">History</string>
    <string name="closed">Closed</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="todo">TODO</string>
    <string name="enter_mobile_number">enter mobile number</string>
    <string name="enter_your_phone_number_to_proceed">Enter your phone number to proceed</string>
    <string name="login">LOGIN</string>
    <string name="entermobileno">ENTER MOBILE NUMBER</string>
    <string name="continu">CONTINUE</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_your_details_for_sign_up">Enter your details for sign up</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="logout">Logout</string>
    <string name="select_locations">Select Locations</string>
    <string name="address_line_one">Address Line One</string>
    <string name="address_line_two">Address Line Two</string>
    <string name="landmark">LandMark</string>
    <string name="pincode">Pincode</string>
    <string name="add_address">Add Address</string>
    <string name="add_new_address">+ Add New Address</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="place_order">Place Order</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="update_address">Update Address</string>
    <string name="cart">Cart</string>
    <string name="no_data_available">No Data Available…</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="could_not_connect_to_the_internet_please_check_your_network">Could not connect to the internet.Please check your network…!</string>
    <string name="try_again">Try again</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="this_order_was_delivered">This Order was Delivered</string>
    <string name="your_order">Your Order</string>
    <string name="item_total">Item Total</string>
    <string name="_200">200</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="grand_total">Grand Total</string>
    <string name="order_details">Order Details</string>
    <string name="order_number">Order Number</string>
    <string name="payment">Payment</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="phone_number">Phone Number</string>
    <string name="_9030080894">9030080894</string>
    <string name="deliver_to">Deliver To</string>
    <string name="address">Address</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="_12">12</string>
    <string name="item_count">Item Count</string>
    <string name="instructions_for_delivery">Instructions for Delivery</string>
    <string name="instructions">Instructions</string>
    <string name="no_connection">No network available, please check your WiFi or Data connection</string>
    <string name="offers">Offers</string>
    <string name="view_offers">View offers</string>
    <string name="select_a_promo_code">Select a promo code</string>
    <string name="apply">APPLY</string>
    <string name="available_offers">Available Offers</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="coupon_applied">Coupon Applied</string>


</resources>