<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoimage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/splash_logo"
        android:contentDescription="@string/todo" />

   <!-- <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#32070707"
        android:contentDescription="@string/todo" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/logoimage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="#D8000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/proxima_nova_bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_phone_number_to_proceed"
            android:fontFamily="@font/proxima_nova_regular">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_10_digit_mobile_number"
                android:inputType="phone"
                android:ems="10"
                android:maxLength="10"
                android:fontFamily="@font/proxima_nova_regular">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/txtInputPassword"
            app:passwordToggleEnabled="true"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:fontFamily="@font/proxima_nova_regular">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/enter_mobile_number"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:alpha="0.5"
            android:enabled="false"
            android:fontFamily="@font/proxima_nova_bold">

        </Button>

    </LinearLayout>

    <include
        android:id="@+id/progressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/progress_layout"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>
