<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/action_layout"
        layout="@layout/action_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnPlaceOrder"
        android:layout_below="@+id/action_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imgShop"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholder" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/imgShop"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/txtShopName"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:text="@string/app_name"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/txtAddreess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:text="@string/app_name"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:text="@string/app_name"
                        android:textSize="13sp"

                        />

                    <TextView
                        android:id="@+id/txtDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:maxLines="1"
                        android:text="@string/app_name"
                        android:textSize="13sp"

                        />

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/instructions"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etComments"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_outline_grey_bg"
                    android:gravity="start"
                    android:hint="@string/instructions_for_delivery"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="#A1EAEAEA"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:text="@string/offers"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/txtPromoCode"
                            android:fontFamily="@font/proxima_nova_regular"
                            android:text="@string/select_a_promo_code"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/proxima_nova_regular"
                            android:gravity="end"
                            android:id="@+id/txtDiscount"
                            android:text="-50.00"
                            android:visibility="gone"
                            android:textColor="@color/colorGreen"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/proxima_nova_regular"
                            android:gravity="end"
                            android:id="@+id/txtViewOffers"
                            android:text="@string/view_offers"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp" />
                    </LinearLayout>


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/order_details"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/itemsCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/txtTotalCount"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:text="@string/item_count"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtTotalCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:text="@string/_12"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txtItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/itemsCount"
                        android:layout_marginTop="8dp"
                        android:layout_toStartOf="@+id/txtTotalItems"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:text="@string/item_total"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtTotalItems"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtTotalCount"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:text="@string/_12"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/txtDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtItems"
                        android:layout_marginTop="8dp"
                        android:layout_toStartOf="@+id/txtGrandTotal"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:text="@string/delivery_charge"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtDeliveryPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtTotalItems"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:text="@string/_12"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/txtDelivery"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/divider" />

                    <TextView
                        android:id="@+id/grandTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:text="@string/grand_total"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtGrandTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:text="@string/_12"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/grandTotal"
                        android:layout_marginTop="10dp"
                        android:background="@color/divider" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/payment_mode"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/rbCash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_outline_grey_bg"
                        android:checked="true"
                        android:padding="15dp"
                        android:text="@string/cash_on_delivery" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/place_order"
        android:textColor="@color/white"
        android:visibility="visible" />

    <include
        android:id="@+id/noInternet"
        layout="@layout/no_connection_layout"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>